--- a/vitor/dashboard.html
+++ b/vitor/dashboard.html
@@ -23,13 +23,19 @@
         <figure class="logo">
           <img src="../images/company_logo.png" alt="Company logo">
           <span class="page-title">
-            Sandbox
+            Sandbox 123
           </span>
         </figure>
       </a>
 
       <nav class="navbar">
         <ul class="menu-list">
+          <li class="menu-item">
+            <a href="products/index.html">Products</a>
+          </li>
+          <li class="menu-item">
+            <a href="dashboard.html">Dashboard</a>
+          </li>
           <li class="menu-item">
             <a href="components/buttons/index.html">Buttons</a>
           </li>
