--- a/vitor/products/index.html
+++ b/vitor/products/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product 1</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <title>Document</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -23,7 +22,7 @@
         <figure class="logo">
           <img src="images/company_logo.png" alt="Company logo">
           <span class="page-title">
-            Products
+            Sandbox
           </span>
         </figure>
       </a>
@@ -55,7 +54,6 @@
       </nav>
     </div>
   </header>
-
   <main id="content">
     <ul class="breadcrumb">
       <li>Products</li>
@@ -116,6 +114,7 @@
       </div>
     </section>
   </main>
+
 </body>
 
 </html>
