--- a/vitor/products/product-1.html
+++ b/vitor/products/product-1.html
@@ -12,11 +12,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
-  <link rel="stylesheet" href="../styles/main.css" />
-  <link rel="stylesheet" href="../components/grid/grid.css" />
-  <link rel="stylesheet" href="../components/buttons/buttons.css" />
-  <link rel="stylesheet" href="../components/forms/forms.css" />
-  <link rel="stylesheet" href="product.css" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/products.css" />
 </head>
 
 <body>
@@ -54,7 +51,7 @@
   </header>
 
   <main id="content">
-    <section class="section product-section">
+    <section class="section products-section">
       <div class="container">
         <div class="row">
           <div class="column is-6">
