--- a/vitor/register-password.html
+++ b/vitor/register-password.html
@@ -19,34 +19,40 @@
   <header class="header">
     <div class="navbar-wrapper">
       <a href="index.html">
-          <figure class="logo">
-              <img src="images/company_logo.png" alt="Company logo">
-              <span class="page-title">
-                  Sandbox
-              </span>
-          </figure>
+        <figure class="logo">
+          <img src="images/company_logo.png" alt="Company logo">
+          <span class="page-title">
+            Sandbox
+          </span>
+        </figure>
       </a>
 
       <nav class="navbar">
-          <ul class="menu-list">
-              <li class="menu-item">
-                  <a href="components/buttons/index.html">Buttons</a>
-              </li>
-              <li class="menu-item">
-                  <a href="components/cards/index.html">Cards</a>
-              </li>
-              <li class="menu-item">
-                  <a href="components/forms/index.html">Forms</a>
-              </li>
-              <li class="menu-item">
-                  <a href="components/sidebar/index.html">Sidebar</a>
-              </li>
-              <li class="menu-item">
-                  <a href="login.html" class="button is-success is-small" style="margin-left:16px;">Login</a>
-              </li>
-          </ul>
+        <ul class="menu-list">
+          <li class="menu-item">
+            <a href="products/index.html">Products</a>
+          </li>
+          <li class="menu-item">
+            <a href="dashboard.html">Dashboard</a>
+          </li>
+          <li class="menu-item">
+            <a href="components/buttons/index.html">Buttons</a>
+          </li>
+          <li class="menu-item">
+            <a href="components/cards/index.html">Cards</a>
+          </li>
+          <li class="menu-item">
+            <a href="components/forms/index.html">Forms</a>
+          </li>
+          <li class="menu-item">
+            <a href="components/sidebar/index.html">Sidebar</a>
+          </li>
+          <li class="menu-item">
+            <a href="login.html" class="button is-success is-small" style="margin-left:16px;">Login</a>
+          </li>
+        </ul>
       </nav>
-  </div>
+    </div>
   </header>
   <main class="login-page">
     <div class="container is-small">
