--- a/tvieira/products/product-1.html
+++ b/tvieira/products/product-1.html
@@ -54,7 +54,7 @@
 
 
     <main id="content">
-        <section class="section product-section">
+        <section class="section products-section">
             <div class="container">
                 <div class="row">
                     <div class="column is-6">
