--- a/tvieira/products/index.html
+++ b/tvieira/products/index.html
@@ -179,7 +179,7 @@
                             <span class="view-quantity">1 - 24 de 127 produtos</span>
                             <span class="page-quantity">artigos por página</span>
                             <select id="select-pageview" id="select-pageview" class="select">
-                                <option value="12">12</option>
+                                <option value="12">12.</option>
                                 <option value="24">24</option>
                                 <option value="48">48</option>
                             </select>
