--- a/tvieira/index.html
+++ b/tvieira/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
+    <title>Homepage</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
@@ -17,7 +17,7 @@
 
     <header class="header">
         <div class="navbar-wrapper">
-            <a href="index.html">        
+            <a href="/index.html" target="_blank">        
                 <figure class="logo">
                     <img src="/tvieira/images/rodacork.png" alt="logo Rodacork">
                     <span class="page-title is-vertical-middle">
@@ -59,24 +59,25 @@
         </nav>
     </header>
 
-<main id="content"></main>
+    <main id="content"></main>
         <section class="hero">
             <div class="container">
-                <div class="row">
-                    <div class="column is-7 is-vertical-top">
-                        <h1 class="title is-1">
-                            Green or Red apple, who cares?
-                        </h1>
-                        <h2 class="subtitle">As long it tastes orange</h2>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Explicabo, atque quas ipsum distinctio earum esse laborum fugit 
-                            alias quos facilis.
-                        </p>
-                        <div class="row is-small">
-                            <div class="column is-7">
+            <div class="row">
+                <div class="column is-7 is-vertical-top">
+                    <h1 class="title is-1">
+                        Green or Red apple, who cares?
+                    </h1>
+                    <h2 class="title is-2">As long it tastes orange</h2>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        Explicabo, atque quas ipsum distinctio earum esse laborum fugit
+                        alias quos facilis.
+                    </p>
+                    <div class="row is-small">
+                        <div class="column is-7">
+                            <div class="field">
                                 <input type="text" id="input-name" placeholder="Please insert your color preference"
-                                        class="input is-dark">
+                                class="input is-dark">
                             </div>
                         </div>
                         <div class="column is-5">
@@ -84,66 +85,66 @@
                         </div>
                     </div>
                 </div>
-
-                <figure class="column is-5">
-                    <img class="image" src="/tvieira/images/undraw_off_road_9oae.svg" alt="Hero Image">
-                </figure>
-                </div>
-            </div>
-    </section> 
+        
+            <figure class="column is-5">
+                <img class="image" src="/tvieira/images/undraw_off_road_9oae.svg" alt="Hero Image">
+            </figure>
+        </div>
+        </div>
+        </section> 
 
         <section class="main-section">
-            <div class="container">
-                <div class="row">
-                    <div class="column is-4">
-                        <div class="card">
-                            <div class="card-content">
-                                <span class="icon is-yellow">
-                                    <i class="fas fa-chart-bar"></i>
-                                </span>
-                                <h3> Section 1</h3>
-                                <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Nemo saepe adipisci reprehenderit voluptatibus dicta, 
-                                modi eligendi aliquam tempora quod praesentium!
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="column is-4">
-                        <div class="card">
-                            <div class="card-content">
-                                <span class="icon is-green">
-                                    <i class="fas fa-user"></i>
-                                </span>
-                                <h3> Section 2</h3>
-                                <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Nemo saepe adipisci reprehenderit voluptatibus dicta, 
-                                modi eligendi aliquam tempora quod praesentium!
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="column is-4">
-                        <div class="card">
-                            <div class="card-content">
-                                <span class="icon is-purple">
-                                    <i class="fas fa-search"></i>
-                                </span>
-                                <h3> Section 3</h3>
-                                <p>
+                <div class="container">
+                    <div class="row">
+                        <div class="column is-4">
+                            <div class="card">
+                                <div class="card-content">
+                                    <span class="icon is-yellow">
+                                        <i class="fas fa-chart-bar"></i>
+                                    </span>
+                                    <h3> Section 1</h3>
+                                    <p>
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                                     Nemo saepe adipisci reprehenderit voluptatibus dicta, 
                                     modi eligendi aliquam tempora quod praesentium!
-                                </p>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column is-4">
+                            <div class="card">
+                                <div class="card-content">
+                                    <span class="icon is-green">
+                                        <i class="fas fa-user"></i>
+                                    </span>
+                                    <h3> Section 2</h3>
+                                    <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                    Nemo saepe adipisci reprehenderit voluptatibus dicta, 
+                                    modi eligendi aliquam tempora quod praesentium!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column is-4">
+                            <div class="card">
+                                <div class="card-content">
+                                    <span class="icon is-purple">
+                                        <i class="fas fa-search"></i>
+                                    </span>
+                                    <h3> Section 3</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                        Nemo saepe adipisci reprehenderit voluptatibus dicta, 
+                                        modi eligendi aliquam tempora quod praesentium!
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
-</main>
+    </main>
    
     <footer class="footer">
         <nav class="footer-nav">
