--- a/tvieira/products/index.html
+++ b/tvieira/products/index.html
@@ -17,13 +17,14 @@
 
     <header class="header">
         <div class="navbar-wrapper">
-            <a href="index.html">        
+            <a href="/index.html">        
         <figure class="logo">
             <img src="/tvieira/images/rodacork.png" alt="logo Rodacork">
             <span class="page-title is-vertical-middle">
                 RodaCork
             </span>
         </figure>
+    </a>
 
     <nav class="navbar">
         <ul class="menu-list">
@@ -470,8 +471,6 @@
                 </div>
             </div>
         </section>
-
-                
 
     </main>
 
