15/04/2021page products and  navigation improvement

--- a/Carlos/register.html
+++ b/Carlos/register.html
@@ -108,7 +108,7 @@
                 </div>
               </div>
               <div class="buttons is-spaced-between">
-                <a href="login.html" class="button is-success">
+                <a href="index.html" class="button is-success">
                   Login
                 </a>
 
