--- a/Carlos/products/products.html
+++ b/Carlos/products/products.html
@@ -44,6 +44,24 @@
            </nav>
     </header>
     <div class="container">
+        <div>
+        <p style="font-size: .8125rem;
+        color: #4d4f53;
+        line-height: inherit;
+        margin: 10px;">
+        Grandes Eletrodomésticos <i class="fas fa-chevron-right"></i> Máquina de roupa
+        </p>
+        <span style="font-size: .875rem;
+        display: inline-block;
+        font-weight: 700;
+        line-height: 1;
+        padding-bottom: .3333333333rem;
+        padding-left: .5rem;">Máquinas de Lavar roupa</span>
+        <div class="product-search">
+            <input type="text" placeholder="O que estás à procura?">
+            <button><i class="fas fa-search"></i></button>
+        </div>
+        </div>
         <div class="pub-products">
             <figure>
                 <img src="../img/pub-products.png" alt="">
@@ -87,7 +105,11 @@
                     </div>
                 </div>
             </div>
-        <div class="listaprodutos column is-9">
+        <div class="listaprodutos column is-9" style="margin-left: 5px;">
+            <div class="ordenar-numero-produtos">
+                1-24 de 126 produtos | Artigos por pagina <select><option value="">12</option><option value="">24</option><option value="">48</option></select> <select><option value="">Relevância</option><option value="">Nome</option><option value="">Preço Ascendente</option><option value="">Preço Descendente</option></select>
+            </div>
+            <div class="column is-12">
             <div class="card column is-4">
                 <figure class="product-image">
                     <img src="../img/products-img/maquina1.jpg" alt="">
@@ -142,6 +164,7 @@
                     <button class="button is-buy">Comprar</button>
                 </div>
             </div>
+            <hr>
             <div class="card column is-4">
                 <figure class="product-image">
                     <img src="../img/products-img/maquina1.jpg" alt="">
@@ -196,6 +219,7 @@
                     <button class="button is-buy">Comprar</button>
                 </div>
             </div>
+            <hr>
             <div class="card column is-4">
                 <figure class="product-image">
                     <img src="../img/products-img/maquina1.jpg" alt="">
@@ -250,6 +274,7 @@
                     <button class="button is-buy">Comprar</button>
                 </div>
             </div>
+            <hr>
             <div class="card column is-4">
                 <figure class="product-image">
                     <img src="../img/products-img/maquina1.jpg" alt="">
@@ -286,6 +311,7 @@
                     <button class="button is-buy">Comprar</button>
                 </div>
             </div>
+        </div>
         </div>
     </div>
     <footer class="footer">
