16/04/2021 products list part2

--- a/Carlos/products/products.html
+++ b/Carlos/products/products.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;0,900;1,900&display=swap" rel="stylesheet">
     <title>Lista de produtos</title>
 </head>
 <body> 
@@ -43,6 +47,17 @@
                </ul>
            </nav>
     </header>
+    <nav class="nav2">
+        <ul>
+            <li><a href="">PRODUTOS</a></li>|
+            <li><a href="">PROMOÇÕES</a></li>|
+            <li><a href="">NOVIDADES</a></li>|
+            <li><a href="">SERVIÇOS</a></li>|
+            <li><a href="">LOJAS ABERTAS</a></li>|
+            <li><a href="">OUTLET</a></li>|
+            <li><a href="">EMPRESAS</a></li>
+        </ul>
+    </nav>
     <div class="container">
         <div>
         <p style="font-size: .8125rem;
