new update vc branch

--- a/vitor/index.html
+++ b/vitor/index.html
@@ -98,7 +98,7 @@
                                 </div>
                             </div>
                             <div class="column is-5">
-                                <button type="button" class="button is-primary">Get access</button>
+                                <button type="button" class="button is-secondary get-acess">Get access</button>
                             </div>
                         </div>
                     </div>
