update vc branch

--- a/vitor/index.html
+++ b/vitor/index.html
@@ -18,7 +18,7 @@
 
 <!-- Body structure is (header) (section>content) and (footer) -->
 <body>
-    <header class="header">
+    <header class="header splash-header">
         <div class="logo-container">
             <a href="index.html">
                 <figure class="logo">
@@ -76,7 +76,7 @@
         </nav>
     </header>
 
-    <main id="content">
+    <main id="content-splash">
         <section class="hero">
             <div class="container">
                 <div class="row">
@@ -98,7 +98,7 @@
                                 </div>
                             </div>
                             <div class="column is-5">
-                                <button type="button" class="button is-secondary get-acess">Get access</button>
+                                <button type="button" class="button is-primary get-acess">Get access</button>
                             </div>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                                         <button type="button" class="button is-primary">
                                             Buy Now
                                         </button>
-                                        <a href="products/product.html" type="button" class="button">
+                                        <a href="products/product.html" type="button" class="button is-secondary">
                                             Learn more
                                         </a>
                                     </div>
@@ -199,7 +199,7 @@
                                         <button type="button" class="button is-primary">
                                             Buy Now
                                         </button>
-                                        <a href="products/swiss-wood-pencils-set.html" type="button" class="button">
+                                        <a href="products/swiss-wood-pencils-set.html" type="button" class="button is-secondary">
                                             Learn more
                                         </a>
                                     </div>
